# sync_cameras

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
cameras/: CMakeLists.txt  README.md  buffer.hpp  v4l2_camera_device.cpp  v4l2_camera_device.hpp  v4l2_custom_capture.cpp  v4l2_custom_capture.hpp
cameras/camera_device/: README.md  buffer.hpp  camera_device.hpp  v4l2_camera_device.cpp  v4l2_camera_device.hpp  v4l2_custom_capture.cpp  v4l2_custom_capture.hpp
cameras/camera_device/cmake/: v4l2_cameraConfig.cmake.in
cameras/camera_device/examples/: CMakeLists.txt  v4l2_camera_example.cpp
cameras/camera_device/libv4l2cpp/: README.md
cameras/camera_device/libv4l2cpp/inc/: V4l2MmapDevice.h
cameras/camera_device/libv4l2cpp/src/: V4l2Capture.cpp  V4l2MmapDevice.cpp  V4l2Output.cpp
cameras/drivers/: Makefile  README.md  virtual_v4l2.c
cameras/examples/: CMakeLists.txt  v4l2_camera_example.cpp
